[gd_scene load_steps=4 format=3 uid="uid://cmldtrpj611cf"]

[ext_resource type="PackedScene" uid="uid://dva206onitosh" path="res://assets/gate_switch.glb" id="1_42uyl"]
[ext_resource type="Script" path="res://assets/gate_switch.gd" id="2_2orxt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_roub1"]
size = Vector3(0.8, 1.6, 1.4)

[node name="gate_switch" groups=["switches"] instance=ExtResource("1_42uyl")]
script = ExtResource("2_2orxt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.726322, -0.307794)
shape = SubResource("BoxShape3D_roub1")

[node name="Cylinder" parent="." index="2"]
transform = Transform3D(0.0405505, 0, 0, 0, 0.331783, 0.0445619, 0, -0.342125, 0.0432148, 0, 1.10751, -0.40254)

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "default"

[node name="SwitchAudio" type="AudioStreamPlayer3D" parent="." index="4"]
volume_db = -2.417
max_db = -2.347
pitch_scale = 0.93

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="switch_activated" from="." to="." method="_on_switch_activated"]
